--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,7 @@
 springBootVersion=2.0.5.RELEASE
 org_hibernate_version=5.3.6.Final
-io_springfox_swagger_version=2.6.1
-commons_lang_version=3.6
-
-# Annotation processors
-lombokVersion=1.18.0
+io_springfox_swagger_version=2.9.2
+querydsl_jpa_version=4.2.1
 
 
 # Gradle plugins
@@ -16,7 +13,7 @@ nodePluginVersion=1.2.0
 
 # Tests
 junit_version=4.12
-h2database_version=1.4.196
-mockito_version=2.10.0
+h2database_version=1.4.197
+mockito_version=2.22.0
 dbunit_version=2.5.4
 spring_test_dbunit_version=1.3.0
