--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,3 +1,18 @@
 spring:
   application:
     name: Customers application
+  datasource:
+    url: jdbc:sqlite:customersapp.db
+    driver-class-name: org.sqlite.JDBC
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: netisov.timofei.propellerhead.customersapp.db.SQLiteDialect
+        id.new_generator_mappings: true
+        generate_statistics: false
+        cache:
+          use_second_level_cache: false
+          use_query_cache: false
+    show-sql: false
