use h2, integrated querydsl and first api request

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,19 @@ org_hibernate_version=5.3.6.Final
 io_springfox_swagger_version=2.9.2
 querydsl_jpa_version=4.2.1
 
+# Common
+commons_lang_version=3.8.1
+org_projectlombok_version=1.18.0
+propdeps_plugin_version=0.0.7
 
 # Gradle plugins
 nodeVersion=8.11.4
 npmVersion=6.4.1
 propdepsPluginVersion=0.0.9.RELEASE
-gradleLombokVersion=1.14
+querydsl_plugin_version=1.0.9
+gradle_lombok_version=1.11
 nodePluginVersion=1.2.0
+dependency_management_plugin_version=1.0.6.RELEASE
 
 # Tests
 junit_version=4.12
