added customer details page

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: Customers application
   datasource:
-    url: jdbc:h2:mem::customersapp.db
+    url: jdbc:h2:mem::customersapp.db;DB_CLOSE_DELAY=-1;MODE=MySQL;MV_STORE=FALSE;MVCC=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -17,12 +17,12 @@ spring:
         cache:
           use_second_level_cache: false
           use_query_cache: false
-    show-sql: false
+    show-sql: true
   liquibase:
     change-log: classpath:/changelog/master.xml
     enabled: true
-  server:
-   session:
-     cookie:
-       http-only: true
+  h2:
+    console:
+      enabled: true
+      path: /h2console
 
