--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -23,7 +23,11 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "ngx-bootstrap": "^3.0.1",
+    "bootstrap": "^4.1.3",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^18.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
